Se agrega forma de trabajo con Artifactory
